--- a/package.json
+++ b/package.json
@@ -10,10 +10,15 @@
   },
   "dependencies": {
     "@next-auth/sequelize-adapter": "^1.0.8",
+    "@tiptap/extension-color": "^2.4.0",
+    "@tiptap/extension-text-style": "^2.4.0",
+    "@tiptap/react": "^2.4.0",
+    "@tiptap/starter-kit": "^2.4.0",
     "axios": "^1.7.2",
     "bcrypt": "^5.1.1",
     "csv-parse": "^5.5.6",
     "formidable": "^3.5.1",
+    "grapesjs": "^0.21.10",
     "next": "14.2.3",
     "next-auth": "^4.24.7",
     "nookies": "^2.5.2",
